<resources>
    <string name="app_name">HACKbandung</string>
    <string name="app_title_HACK">H A C K</string>
    <string name="app_title_bandung">bandung</string>
    <string name="app_title_bar">H A C K</string>

    <!-- ACTIVITY TITLE -->
    <string name="SignInActivity_TITLE">Sign In</string>
    <string name="SignUpActivity_TITLE">Sign Up</string>
    <string name="UserRoleActivity_TITLE">User Role</string>
    <string name="GovernmentAgencyActivity_TITLE">Government Agency</string>
    <string name="NavigationDrawerCitizensActivity_TITLE">Citizens</string>
    <string name="NavigationDrawerGovernmentActivity_TITLE">Government</string>


    <!-- MAIN ACTIVITY -->
    <string name="buttonMainActivity_SIGNUP">Sign Up</string>
    <string name="textViewMainActivity_OR">--- or ---</string>
    <string name="textViewMainActivity_HAVE_AN_ACCOUNT">Already have an account? Sign in</string>

    <!-- SIGN UP ACTIVITY -->
    <string name="buttonSignUpActivity_SIGNUP">Sign Up</string>
    <string name="textViewSignUpActivity_HAVE_AN_ACCOUNT">Already have an account? Sign in</string>

    <!-- SIGN IN ACTIVITY -->
    <string name="buttonSignInActivity_SIGNIN">Sign In</string>
    <string name="textViewSignInActivity_REGISTER_AN_ACCOUNT">Create an account</string>
    <string name="textViewSignInActivity_FORGOT_PASSWORD">Forgot password</string>

    <!-- USER ROLE ACTIVITY -->
    <string name="textViewUserRoleActivity_TITLE">Your role?</string>
    <string name="buttonUserRoleActivity_CITIZENS">Citizens</string>
    <string name="buttonUserRoleActivity_GOVERNMENT">Government</string>

    <color name="app_background_color">#F2F4F4</color>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- NAVIGATION DRAWER -->
    <string-array name="navigation_drawer_items_array">
        <item>Dashboard</item>
        <item>Mission</item>
        <item>Scoreboard</item>
        <item>History</item>
        <item>Logout</item>
    </string-array>

    <!-- WRITE A NEW REPORT CITIZENS -->
    <string name="buttonWriteANewReportActivity_CAMERA">Take a photo</string>
    <string name="buttonWriteANewReportActivity_SEND">Send</string>
    <string name="textViewWriteANewReportActivity_TOPIC">Topic:</string>

    <!-- COMPLETE DETAIL -->
    <string name="textViewCompleteDetailActivity_HANDLE_BY_LABEL">Handled by</string>
    <string name="textViewCompleteDetailActivity_HANDLE_BY_VALUE">value</string>
    <string name="textViewCompleteDetailActivity_BEFORE_LABEL">Before</string>
    <string name="textViewCompleteDetailActivity_AFTER_LABEL">After</string>

    <!-- COMPLETION REPORT -->
    <string name="textViewCompletionReportActivity_FINISH_TIME_LABEL">Finish time</string>
    <string name="textViewCompletionTimeActivity_FINISH_TIME_VALUE">value</string>
    <string name="textViewCompletionReportActivity_BEFORE_LABEL">Before</string>
    <string name="textViewCompletionReportActivity_AFTER_LABEL">After</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer_citizens">NavigationDrawerCitizensActivity</string>
    <string name="title_activity_navigation_drawer_government">NavigationDrawerGovernmentActivity</string>
</resources>
