<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/app_background_color"
    tools:context="com.sai.hackbandung.MainActivity">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMainActivity_TITLE_HACK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/activity_main_title_HACK"
            android:text="@string/app_title_HACK" />


        <TextView
            android:id="@+id/textViewMainActivity_TITLE_bandung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/activity_main_title_bandung"
            android:text="@string/app_title_bandung" />


        <Button
            android:id="@+id/buttonMainActivity_SIGNUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="@dimen/activity_main_button_signup"
            android:text="@string/buttonMainActivity_SIGNUP"
            android:background="#f7dc6f" />


        <TextView
            android:id="@+id/textViewMainActivity_OR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/activity_main_textview_or"
            android:text="@string/textViewMainActivity_OR" />


        <TextView
            android:id="@+id/textViewMainActivity_HAVE_AN_ACCOUNT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/activity_main_textview_have_an_account"
            android:text="@string/textViewMainActivity_HAVE_AN_ACCOUNT" />


    </LinearLayout>

</RelativeLayout>
