<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_role"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/app_background_color"
    tools:context="com.sai.hackbandung.UserRoleActivity">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewUserRoleActivity_TITLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/activity_userrole_title"
            android:text="@string/textViewUserRoleActivity_TITLE" />

        <Button
            android:id="@+id/buttonUserRoleActivity_CITIZENS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="@dimen/activity_userrole_button_citizens"
            android:text="@string/buttonUserRoleActivity_CITIZENS"
            android:background="#f7dc6f" />

        <Button
            android:id="@+id/buttonUserRoleActivity_GOVERNMENT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="@dimen/activity_userrole_button_government"
            android:text="@string/buttonUserRoleActivity_GOVERNMENT"
            android:background="#f7dc6f" />

    </LinearLayout>

</RelativeLayout>
