<?xml version="1.0" encoding="utf-8"?>
<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp">


        <TextView
            android:id="@+id/textViewWriteANewReportActivity_TOPIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textSize="@dimen/write_a_new_report_citizens"
            android:text="@string/textViewWriteANewReportActivity_TOPIC" />

        <EditText
            android:id="@+id/editTextWriteANewReportActivity_TOPIC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Write a topic"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textViewWriteANewReportActivity_LOCATION"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textSize="@dimen/write_a_new_report_citizens"
            android:text="Location" />

        <EditText
            android:id="@+id/editTextWriteANewReportActivity_LOCATION"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Write the location"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textViewWriteANewReportActivity_MESSAGE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textSize="@dimen/write_a_new_report_citizens"
            android:text="Message" />

        <EditText
            android:id="@+id/editTextWriteANewReportActivity_MESSAGE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Write a message"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textViewWriteANewReportActivity_IMAGE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textSize="@dimen/write_a_new_report_citizens"
            android:text="Photo" />

        <ImageView
            android:id="@+id/imageViewWriteANewReportActivity"
            android:layout_width="300dp"
            android:layout_height="200dp" />

        <!-- TAKE A PHOTO BUTTON -->
        <Button
            android:id="@+id/buttonWriteANewReportActivity_CAMERA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/buttonWriteANewReportActivity_CAMERA"
            android:textStyle="bold"
            android:background="#f7dc6f" />

        <!-- SEND BUTTON -->
        <Button
            android:id="@+id/buttonWriteANewReportActivity_SEND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f7dc6f"
            android:textStyle="bold"
            android:text="@string/buttonWriteANewReportActivity_SEND" />

    </TableLayout>

</ScrollView>